# repositorio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Equipo302.md  README.md  app.db  main.cpp
src/: database.cpp  database.h
src/models/: Alumno.h  Coordinacion.h  Tutor.h  Usuario.h
static/css/: style.css
templates/: coordinator.html  login.html  student.html  tutor.html
